# this section just here to allow for editable install
[versioneer]
VCS = git
style = pep440
versionfile_source = core/superduperreload/_version.py
versionfile_build = core/superduperreload/_version.py
tag_prefix =
parentdir_prefix = superduperreload-

[metadata]
description_file = README.md

[bdist_wheel]
universal = 1

